--- a/src/pages/Welcome/Welcome.css
+++ b/src/pages/Welcome/Welcome.css
@@ -3,26 +3,26 @@
     padding: 0;
 }
 .container{
-    height: 50vh;
+    height: 100vh;
     width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-content: space-around;
     align-items: center;
-    background-image: url(../../assets/img/background.png);
+    //background-image: url(../../assets/img/WelcomeBG.png);
     background-size: cover;
     background-repeat: no-repeat;
-}
+}/*
 .container h1{
   color:  rgba(250, 105, 0, 1)
-}
+}*/
 .container p {
     color: rgba(101, 60, 4, 1);
 }
 .vertical-line{
-    height: 6rem;
-    border: 1px solid  rgb(187, 187, 187);
+    height: 16rem;
+    border: 1px solid #939393;
 }
 #container{
     display: flex;
@@ -33,8 +33,8 @@
     vertical-align: 2px;
 }
 #container img{
-    width: 80px;
-    height: 80px;
+    width: 200px;
+    height: 180 px;
 }
 .text{
     padding-left: 1rem;
@@ -42,3 +42,34 @@
 .text h1{
     padding-bottom: 0.25rem;
 }
+
+.title-logo{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 96px;
+    line-height: 116px;
+
+    color: #000000;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.subtitle-logo{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 36px;
+
+    color: #000000;
+}
+
+
+
+
+
+
+
+
+
+
