--- a/src/pages/Welcome/Welcome.css
+++ b/src/pages/Welcome/Welcome.css
@@ -4,25 +4,25 @@
 }
 .container{
     height: 100vh;
-    width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-content: space-around;
     align-items: center;
-    //background-image: url(../../assets/img/WelcomeBG.png);
-    background-size: cover;
+    background-image: url(../../assets/img/WelcomeBGr.png);
     background-repeat: no-repeat;
-}/*
-.container h1{
-  color:  rgba(250, 105, 0, 1)
-}*/
+    background-size: cover;
+    background-position-y: center;
+
+}
+
 .container p {
     color: rgba(101, 60, 4, 1);
 }
 .vertical-line{
     height: 16rem;
     border: 1px solid #939393;
+    display: flex;
 }
 #container{
     display: flex;
@@ -31,16 +31,21 @@
     align-items: center;
     justify-content: center;
     vertical-align: 2px;
+    padding: .5rem;
+    gap: 3rem;
 }
 #container img{
     width: 200px;
     height: 180 px;
 }
-.text{
-    padding-left: 1rem;
-}
+
 .text h1{
-    padding-bottom: 0.25rem;
+    padding: .5rem 0;
+    color:  rgba(250, 105, 0, 1);
+    
+}
+.text p {
+    color: rgba(101, 60, 4, 1);
 }
 
 .title-logo{
@@ -49,7 +54,6 @@
     font-weight: 400;
     font-size: 96px;
     line-height: 116px;
-
     color: #000000;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
